syntax = "proto3";
package proto;

import "protos/common/common.proto";

option go_package = "github.com/hyperledger/fabric/orderer/consensus/hotstuff/proto";

message Transaction {
  common.Envelope envelope = 1;
  string channal_id = 2;
  uint64 config_seq = 3;
}

message Block {
  bytes ParentHash = 1;
  bytes Hash = 2;
  uint64 height = 3;
  repeated Transaction commands = 4;
  QuorumCert Justify = 5;
  bool committed = 6;
  bool isNormal = 7;
}

enum MsgType {
  PREPARE = 0;
  PREPARE_VOTE = 1;
  PRECOMMIT = 2;
  PRECOMMIT_VOTE = 3;
  COMMIT = 4;
  COMMIT_VOTE = 5;
  NEWVIEW = 6;
  DECIDE = 7;
}

message QuorumCert {
  bytes BlockHash = 1;
  MsgType type = 2;
  uint64 viewNum = 3;
  bytes signature = 4;
}
