syntax = "proto3";
package proto;

import "fabric.proto";
import "common/common.proto";

option go_package = "github.com/theodocius271/hotstuff/proto";

message Msg {
  oneof Payload {
    Prepare prepare = 1;
    PrepareVote prepareVote = 2;
    PreCommit preCommit = 3;
    PreCommitVote preCommitVote = 4;
    Commit commit = 5;
    CommitVote commitVote = 6;
    Decide decide = 7;
    NewView newView = 8;
    Request request = 9;
    Reply reply = 10;
  }
//   string senderAddress = 11;
}

message Empty {}

message Prepare {
  Block curProposal = 1;
  QuorumCert highQC = 2;
  uint64 viewNum = 3;
}

message PrepareVote {
  bytes blockHash = 1;
  QuorumCert qc = 2;
  bytes partialSig = 3;
  uint64 viewNum = 4;
}

message PreCommit {
  QuorumCert prepareQC = 1;
  uint64 viewNum = 2;
}

message PreCommitVote {
  bytes blockHash = 1;
  QuorumCert qc = 2;
  bytes partialSig = 3;
  uint64 viewNum = 4;
}

message Commit {
  QuorumCert preCommitQC = 1;
  uint64 viewNum = 2;
}

message CommitVote {
  bytes blockHash = 1;
  QuorumCert qc = 2;
  bytes partialSig = 3;
  uint64 viewNum = 4;
}

message Decide {
  QuorumCert commitQC = 1;
  uint64 viewNum = 2;
}

message NewView {
  QuorumCert prepareQC = 1;
  uint64 viewNum = 2;
}

//message Request {
//  string cmd = 1;
//  string clientAddress = 2;
//}

message Request {
  common.Envelope envelope = 1;
  string channal_id = 2;
  uint64 config_seq = 3;
  bool is_normal = 4;
  uint64 time_stamp = 5;
  string client_address = 6;
}

message Reply {
  string result = 1;
  string command = 2;
}

service HotStuffService {
  rpc SendMsg(Msg) returns (Empty) {}
  rpc SendRequest(Msg) returns (Empty) {}
  rpc SendReply(Msg) returns (Empty) {}
}
